syntax = "proto3";

package ladder;

option go_package = "squash-ladder/server/gen/ladder";

// Player represents a player in the squash ladder
message Player {
  string id = 1;    // Unique player identifier (changed to string for flexibility)
  string name = 2;  // Player name
  int32 rank = 3;   // Current rank in the ladder (1 is highest)
}

// ListPlayersRequest is empty for now
message ListPlayersRequest {}

// ListPlayersResponse contains a list of players ordered by rank
message ListPlayersResponse {
  repeated Player players = 1;
}

message AddPlayerRequest {
  string name = 1;
  string player_id = 2; // Optional, can be generated if empty
}

message AddPlayerResponse {
  Player player = 1;
}

message RemovePlayerRequest {
  string player_id = 1;
}

message RemovePlayerResponse {
  bool success = 1;
}

message SetScore {
  int32 challenger_points = 1;
  int32 defender_points = 2;
  bool challenger_default = 3;
  bool defender_default = 4;
}

message MatchResult {
  string challenger_id = 1;
  string defender_id = 2;
  string winner_id = 3;
  // Individual set scores
  repeated SetScore set_scores = 4;
  int64 timestamp_ms = 5;
  string transaction_id = 6;
}

message AddMatchResultRequest {
  string challenger_id = 1;
  string defender_id = 2;
  string winner_id = 3;
  repeated SetScore set_scores = 4;
}

message AddMatchResultResponse {
  bool success = 1;
  string transaction_id = 2; // UUID of the transaction
}

message InvalidateMatchResultRequest {
  string transaction_id = 1;
}

message InvalidateMatchResultResponse {
  bool success = 1;
}

message ListRecentMatchesRequest {
  int32 limit = 1;
}

message ListRecentMatchesResponse {
  repeated MatchResult results = 1;
}

// LadderService provides access to the squash ladder
service LadderService {
  // ListPlayers returns all players ordered by rank
  rpc ListPlayers(ListPlayersRequest) returns (ListPlayersResponse);
  
  // AddPlayer adds a new player to the bottom of the ladder
  rpc AddPlayer(AddPlayerRequest) returns (AddPlayerResponse);
  
  // RemovePlayer removes a player from the ladder
  rpc RemovePlayer(RemovePlayerRequest) returns (RemovePlayerResponse);
  
  // AddMatchResult records a match result and updates the ladder
  rpc AddMatchResult(AddMatchResultRequest) returns (AddMatchResultResponse);
  
  // InvalidateMatchResult reverts a previously recorded match
  rpc InvalidateMatchResult(InvalidateMatchResultRequest) returns (InvalidateMatchResultResponse);

  // ListRecentMatches returns the last n matches
  rpc ListRecentMatches(ListRecentMatchesRequest) returns (ListRecentMatchesResponse);
}
